--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = denky32
 framework = arduino
 monitor_speed = 115200
+board_build.partitions = huge_app.csv
 lib_deps = 
 	lvgl/lvgl@8.3.11
 	bodmer/TFT_eSPI@^2.5.43
@@ -21,3 +22,5 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.3.1
 	arduino-libraries/NTPClient@^3.2.1
 	paulstoffregen/Time@^1.6.1
+	nodaoli/ArduinoUZlib@^1.0.2
+	tzapu/WiFiManager@^2.0.17
